--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+body {
+    margin: 0;
+    padding: 0;
+    background: rgba(0, 0, 0, 0.49);
+}
+h2,h3,h4,h5,h6{
+    margin: 0;
+    padding: 0;
+}
+h1 {
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-stroke-width: medium;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.SimpsonsStyle {
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #8f7100;
+    text-align: center;
+    margin: 5px;
+    padding: 20px;
+    background: silver;
+    border: 1px solid #383838;
+    border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainH1 {
+    text-align: center;
+    margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.RickAndMortyStyles {
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #1f1f1f;
+    text-align: center;
+    margin: 5px;
+    padding: 20px;
+    background: #416c6c;
+    border: 1px solid #383838;
+    border-radius: 20px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
